fixed status alignment

--- a/app/assets/stylesheets/book-item-box.scss
+++ b/app/assets/stylesheets/book-item-box.scss
@@ -27,7 +27,7 @@
   width: 66%;
   display: grid;
   margin-left: 6px;
-  grid-template-rows: 1fr 1fr 1fr 4fr;
+  grid-template-rows: 1fr 1fr 1fr 5fr;
 }
 
 .book-cover{
@@ -36,21 +36,21 @@
 }
 
 .book-title{
-  grid-area: 1/1/2/1;
   font-size: 18px;
   font-weight: bold;
   font-family: "Merriweather", "Georgia", serif;
 }
 .book-author{
-  grid-area: 2/1/3/1;
   font-size: 14px;
+  font-family: Merriweather, Georgia, serif;
 }
 
 .book-status{
-  grid-area: 3/1/4/1;
+  display: flex;
 }
 .book-description{
-  grid-area: 4/1/4/1;
+  font-size: 14px;
+  margin-top: 7px;
   text-overflow: ellipsis;
   overflow: hidden;
 }
@@ -75,4 +75,10 @@
   color:white;
   text-align: center;
   background-color: rgb(64, 157, 105);
+}
+
+.star-rating{
+  font-size: 12px;  
+  margin-bottom: auto;
+  margin-top: auto;
 }
